# doc-chunker

./: .gitignore  DECISIONS.md  DESIGN.md  README.md  TESTING.md  pyproject.toml
.doc_index_demo/: chunks.jsonl  manifest.json
docs/interview/: INTERVIEW_CHECKLIST.md  INTERVIEW_SCRIPT.md
docs/process/: AI_WORKFLOW.md  REVIEW_FINDINGS.md  TODO.md  UPGRADE_SUMMARY.md
docs/study/: BEGINNER_GUIDE.md  STUDY_PATH.md
docs/superpowers/plans/: 2026-07-06-doc-chunker.md
samples/: example.txt  long_policy.txt  project_brief.md  support_tickets.csv
scripts/: demo_retriever.py
src/doc_chunker/: __init__.py  chunker.py  cli.py  models.py  nanobot_tool.py  parsers.py  pipeline.py  store.py
tests/: conftest.py  pdf_fixtures.py  test_chunker.py  test_cli_and_tool.py  test_parsers.py  test_store.py  test_store_contract.py
