[project]
name = "doc-chunker"
version = "0.1.0"
description = "Context-aware document parsing and chunking module for nanobot take-home."
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
# nanobot is not published on PyPI; this extra documents the intended
# dependency relationship (`pip install doc-chunker[nanobot]`) even though
# resolving it currently requires nanobot to be installed from its own
# local path first. See DECISIONS.md D008.
nanobot = ["nanobot"]
test = ["pytest>=8.0.0"]

[project.scripts]
doc-chunker = "doc_chunker.cli:console_main"

[project.entry-points."nanobot.tools"]
document_chunker = "doc_chunker.nanobot_tool:DocumentChunkerTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
